@@ -31,8 +31,8 @@ These tasks are:
 <li>[[ant:retrieve]]</li>
 <li>[[ant:cachefileset]]</li>
 <li>[[ant:cachepath]]</li>
-<li>[[ant:artifactproperty]] <span class="since">(since 1.5)</span></li>
-<li>[[ant:artifactreport]] <span class="since">(since 1.5)</span></li>
+<li>[[ant:artifactproperty]] <span class="since">(since 2.0)</span></li>
+<li>[[ant:artifactreport]] <span class="since">(since 2.0)</span></li>
 </ul>
 
 All these tasks will trigger automatically a resolve if:
@@ -63,6 +63,7 @@ The attributes listed are then mostly used only if a resolve is triggered automa
     <tr><td>transitive</td><td>true to resolve dependencies transitively, false otherwise <span class="since">since 1.4</span></td><td>No. Defaults to true</td></tr>
     <tr><td>haltonfailure</td><td>true to halt the build on ivy failure, false to continue</td><td>No. Defaults to true</td></tr>
     <tr><td>validate</td><td>true to force ivy files validation against ivy.xsd, false to force no validation</td><td>No. Defaults to default ivy value (as configured in configuration file)</td></tr>
+    <tr><td>file</td><td>the file to resolve if a resolve is necessary <span class="since">since 2.0</span></td><td>No. Defaults to the previous resolved Ivy file or to ${ivy.dep.file}</td></tr>
 </tbody>
 </table>
 <h1>Examples</h1>
