@@ -1171,6 +1171,17 @@ argument_list|)
 expr_stmt|;
 name|_path
 operator|.
+name|setFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/java/org/apache/ivy/ant/ivy-simple.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|_path
+operator|.
 name|execute
 argument_list|()
 expr_stmt|;
@@ -1249,6 +1260,164 @@ operator|.
 name|getAbsolutePath
 argument_list|()
 argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testWithResolveIdAndMissingConfs
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Project
+name|project
+init|=
+operator|new
+name|Project
+argument_list|()
+decl_stmt|;
+name|project
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.settings.file"
+argument_list|,
+literal|"test/repositories/ivysettings.xml"
+argument_list|)
+expr_stmt|;
+name|IvyResolve
+name|resolve
+init|=
+operator|new
+name|IvyResolve
+argument_list|()
+decl_stmt|;
+name|resolve
+operator|.
+name|setProject
+argument_list|(
+name|project
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|setCache
+argument_list|(
+name|_cache
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|setFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/java/org/apache/ivy/ant/ivy-multiconf.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|setResolveId
+argument_list|(
+literal|"testWithResolveIdAndMissingConfs"
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|setConf
+argument_list|(
+literal|"default"
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+comment|// resolve another ivy file
+name|resolve
+operator|=
+operator|new
+name|IvyResolve
+argument_list|()
+expr_stmt|;
+name|resolve
+operator|.
+name|setProject
+argument_list|(
+name|_project
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|setCache
+argument_list|(
+name|_cache
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|setFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/java/org/apache/ivy/ant/ivy-latest.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|_project
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.dep.file"
+argument_list|,
+literal|"test/java/org/apache/ivy/ant/ivy-multiconf.xml"
+argument_list|)
+expr_stmt|;
+name|_path
+operator|.
+name|setResolveId
+argument_list|(
+literal|"testWithResolveIdAndMissingConfs"
+argument_list|)
+expr_stmt|;
+name|_path
+operator|.
+name|setPathid
+argument_list|(
+literal|"withresolveid-pathid"
+argument_list|)
+expr_stmt|;
+name|_path
+operator|.
+name|setConf
+argument_list|(
+literal|"default,compile"
+argument_list|)
+expr_stmt|;
+name|_path
+operator|.
+name|setFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/java/org/apache/ivy/ant/ivy-multiconf.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|_path
+operator|.
+name|execute
+argument_list|()
 expr_stmt|;
 block|}
 specifier|private
